# iopsys-openwrt-inteno

./: .gitignore  Config.in  Makefile  config  config.master  feeds.conf.default  genconfig  genconfig.last  genconfig.oldversion  genconfig_new  iop_firmware_install.sh  iop_get_feeds.sh  iop_install_key.sh  iop_set_webgui  iop_update_package.sh  newgenconfig  version
configs/MASTER/: config
configs/OPEN/: open.diff
configs/cg300/: cg300.diff
configs/cg301/: cg301.diff
configs/dg150/: dg150.diff
configs/dg200/: dg200.diff
configs/dg301al/: dg301al.diff
configs/dg400/: dg400.diff
configs/eg200/: eg200.diff
configs/eg300/: eg300.diff
configs/vg50/: vg50.diff
configs/vox25/: eg200.diff  vox25.diff
include/: Makefile  device_table.txt  download.mk  image.mk  package-defaults.mk  package.mk  toplevel.mk  version.mk
include/site/: Makefile
package/6relayd/files/: 6relayd.config
package/af_alg/patches/: 001-Makefile_fix.patch
package/alleato-base/: Makefile
package/ami_tool/: Makefile
package/ami_tool/src/: Makefile  ami_connection.c  ami_connection.h  ami_tool.c  ami_tool.h  ucix.h
package/anyfi/: Config.in  Makefile
package/anyfi/files/: anyfi.sh
package/asterisk-1.8.x-mod/: Makefile
package/asterisk-1.8.x-mod/files/: asterisk.init
package/asterisk-1.8.x-mod/patches/: 001-chan_sip_remote_hold.patch  002-digit_escape.patch  003-chan_sip_remote_hold.patch  004-transfer_remote.patch
package/base-files/: Makefile  iopsys
package/base-files/MASTER/: Makefile  config
package/base-files/cg300/: Makefile
package/base-files/dg351/: dg351.diff
package/base-files/iopsys/: Makefile
package/base-files/routermodel/: depends  update-makefiles.sh
package/base-files/vox25/: Makefile
package/bcmhotproxy/: Makefile
package/bcmhotproxy/src/: Makefile  bcmhotproxy.c
package/bcmkernel/: 414040.mk  416021.mk  416030.mk  Config.in  Makefile
package/bcmopen/: Config.in  Makefile
package/block-mount/files/: 40-mount
package/bluez/: Makefile
package/boot/: Makefile
package/bootchart2/: Makefile
package/brcm-h/: Makefile
package/brcm_fw_tool/: Makefile
package/brcm_fw_tool/src/: Makefile  brcm_fw_tool.c  jffs2.c
package/brcminfo/: Makefile
package/broadcom-nvram/src/: nvram_emu_lib.c
package/busybox/patches/: 921-udhcpc_add_43IUP_option.patch  922-udhcpc_add-option241.patch  960-udhcpc_changed_opt132.patch
package/cfmod/: .gitignore  Makefile
package/curl/: Makefile
package/curl/.svn/: entries
package/customers/: Makefile
package/customers/VODAFONE/: Makefile
package/customers/cg300/: Makefile
package/customers/vox25/: Makefile
package/dahdi/: Makefile
package/dect-prog/: Makefile
package/dectmngr/: Makefile
package/dectmngr2/: Makefile
package/devel/: Makefile
package/dnsmasq/: Makefile
package/dnsmasq/files/: dnsmasq.conf  dnsmasq.init
package/dnsmasq/patches/: 100-fix-dhcp-no-address-warning.patch
package/endptcfg/: Makefile
package/endptcfg/src/: Makefile  endptcfg.c
package/endptctl/: Makefile
package/firewall/: Makefile
package/firewall/files/: firewall.config  firewall.init
package/firmware/: Makefile
package/freecwmp/: Makefile
package/gmp/: Makefile
package/gmp/.svn/: entries
package/hotplug2/: Makefile
package/ice-client/: Makefile
package/inteno/: Makefile
package/inteno/4g-support/: Makefile
package/inteno/af_alg/: Makefile
package/inteno/ami_tool/: Makefile
package/inteno/asterisk-1.8.x-mod/: Makefile
package/inteno/bcmhotproxy/: Makefile
package/inteno/bcmkernel/: 414040.mk  416021.mk  416030.mk  416040.mk  Config.in  Makefile
package/inteno/bcmopen/: Config.in
package/inteno/block-mount-old/: Makefile
package/inteno/luciexpress/src/rpcd/: CMakeLists.txt  luci2.c
package/inteno/peripheral_manager/src/: Makefile.am  ledctl
package/inteno/peripheral_manager/src/configs/: hw
package/inteno/peripheral_manager/src/src/: button.c  button.h  gpio.c  gpio.h  gpio_button.c  gpio_led.c  gpio_shift_register.c  gpio_shift_register.h  gpio_test.c  i2c.c  i2c.h  led.c  led.h  peripheral_manager.c  prox_px3220.c  server.c  sfp.c  sim_button.c  sim_led.c  sx9512.c  sx9512.h  touch_sx9512.c  touch_sx9512.h  vox.c  vox_test.c
package/iup/: Makefile
package/jansson/: Makefile
package/layer2interface/: Makefile
package/ledmngr/: Makefile
package/libmbim/: Makefile
package/libqmi/: Makefile
package/libs/: Makefile
package/lighttpd/: Makefile
package/minidlna/: Makefile
package/mtd-utils-mod/: Makefile
package/natalie-dect/: Makefile
package/natalie-dect-h/: Makefile
package/natalie-dect-open/: Makefile
package/netcheck/: Makefile
package/network/: Makefile
package/openssl/: Makefile
package/peripheral_manager/: Makefile
package/peripheral_manager/src/: Makefile.am  configure.ac
package/peripheral_manager/src/configs/: DG301R0  hw
package/peripheral_manager/src/src/: button.c  button.h  catv.c  catv.h  catv_monitor.c  gpio.c  gpio_button.c  gpio_led.c  i2c.c  i2c.h  led.c  led.h  log.h  peripheral_manager.c  prox_px3220.c  server.c  server.h  sfp.c  sim_button.c  sim_led.c  touch_sx9512.c  touch_sx9512.h  ucix.c  ucix.h  vox.c  vox_test.c
package/qrencode/: Makefile
package/questd/: Makefile
package/samba2/: Makefile
package/shflags/: Makefile
package/statd/: Makefile
package/system/: Makefile
package/teliasafety-misc/: Makefile
package/tptest/: Makefile
package/ubus/: Makefile
package/utils/: Makefile
package/voicesec/: Makefile
package/wl-anyfi/: Makefile
quarantine/: image-config.in
quarantine/files/: Makefile
quarantine/old-rebase-on-master/: Makefile
quarantine/old-rebase-on-master/package/peripheral_manager/src/: Makefile.am  configure.ac
quarantine/old-rebase-on-master/package/peripheral_manager/src/src/: catv.c  catv.h  gpio.c  prox_px3220.h  sfp.c  sfp.h  touch_sx9512.h  vox.c
quarantine/package/: Makefile
scripts/: Makefile
scripts/flashing/: Makefile
toolchain/gcc/: Makefile
tools/firmware-utils/: Makefile
tools/include/: Makefile
tools/mtd-utils/: Makefile
(+1998 files in other folders)
